# rusty-resty

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/rust-api-macros/src/: lib.rs  route.rs
crates/rust-api/src/: server.rs
crates/rustapi-core/: Cargo.toml
crates/rustapi-core/src/: app.rs  di.rs  error.rs  lib.rs  router.rs  server.rs
crates/rustapi-macros/: Cargo.toml
crates/rustapi-macros/src/: lib.rs  route.rs
crates/rusty-resty-core/: Cargo.toml
crates/rusty-resty-core/src/: app.rs  error.rs  lib.rs
examples/: hello_world.rs  with_macros.rs
examples/basic-api/src/: main.rs
src/: lib.rs  main.rs
src/controllers/: echo_controller.rs  health_controller.rs
src/services/: echo_service.rs  health_service.rs
