[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"
authors = []
description = "FastAPI-inspired REST framework for Rust with automatic OpenAPI, validation, and DI"
readme = "README.md"
homepage = "https://github.com/yourusername/rustapi"
repository = "https://github.com/yourusername/rustapi"
license = "MIT OR Apache-2.0"
keywords = ["api", "rest", "web", "framework", "fastapi"]
categories = ["web-programming::http-server"]

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustapi-core = { path = "crates/rustapi-core" }
rustapi-macros = { path = "crates/rustapi-macros" }

[dev-dependencies]
criterion = "0.5"
axum-test = "15.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
