[package]
name = "rustapi-core"
version = "0.1.0"
edition = "2021"
authors = []
description = "Core runtime for rustapi framework"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
